tests/snapshots/e2e_interactive_test__expand_initial.snap
---
source: tests/e2e_interactive_test.rs
expression: snapshot1
---
[
    "📂  /test",
    "╔══════════════════════════════════════════════════════════════════════════════╗",
    "║>> ▼   test                                                                   ║",
    "║       • 001_init.sql                                                         ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "╚══════════════════════════════════════════════════════════════Press h for help╝",
]
