tests/snapshots/e2e_interactive_test__nav_after_k.snap
---
source: tests/e2e_interactive_test.rs
expression: snapshot2
---
[
    "📂  /test",
    "╔══════════════════════════════════════════════════════════════════════════════╗",
    "║   ▼   test                                                                   ║",
    "║>>     • 001_init.sql                                                         ║",
    "║       • 002_users.sql                                                        ║",
    "║       • 003_products.sql                                                     ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "╚══════════════════════════════════════════════════════════════Press h for help╝",
]
