tests/snapshots/e2e_interactive_test__nav_initial.snap
---
source: tests/e2e_interactive_test.rs
expression: snapshot1
---
[
    "📂  /test",
    "╔══════════════════════════════════════════════════════════════════════════════╗",
    "║>> ▼   test                                                                   ║",
    "║       • 001_init.sql                                                         ║",
    "║       • 002_users.sql                                                        ║",
    "║       • 003_products.sql                                                     ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "║                                                                              ║",
    "╚══════════════════════════════════════════════════════════════Press h for help╝",
]
